.kubernetes/development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acdc-back-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acdc-back-office
  template:
    metadata:
      labels:
        app: acdc-back-office
    spec:
      containers:
        - name: acdc-back-office
          image: inseefrlab/acdc-back-office:develop
          imagePullPolicy: Always
