.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: acdc-back-office
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: acdc-back-office
