.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acdc-back-office
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - acdc-back-office.demo.insee.io
  rules:
    - host: acdc-back-office.demo.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acdc-back-office
                port:
                  number: 8080
